[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/player/player.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 36 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 46
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="WeaponSpawnPosition" type="Position2D" parent="."]
position = Vector2( 48, 0 )

[node name="SkillSpawnPosition" type="Position2D" parent="."]
position = Vector2( 86, 0 )

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="AttackDelay" to="." method="_on_AttackDelay_timeout"]
